--- a/index.html
+++ b/index.html
@@ -251,8 +251,10 @@
                     <div class="song-autor">Brano nome</div>
                 </div>
 
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-folder"></i>
+                <div class="song-icons">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
             </div>
 
             <div class="song-player-container">
